<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gold"
    android:id="@+id/add_gyms_id"
    tools:context=".addgymsPage">


    <TextView
        android:id="@+id/addgymsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"

        android:layout_marginTop="8dp"
        android:text="Add gyms"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/gym_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/addgymsTitle"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="name"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gym_description"
        android:layout_below = "@id/gym_name"
        android:hint="description"
        android:textColorHint = "@color/black"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gym_location"
        android:layout_below = "@id/gym_description"
        android:hint="location"
        android:textColorHint = "@color/black"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gym_phoneNumber"
        android:layout_below = "@id/gym_location"
        android:hint="phone number"
        android:textColorHint = "@color/black"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gym_hours"
        android:layout_below = "@id/gym_phoneNumber"
        android:hint="hours of operation"
        android:textColorHint = "@color/black"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addgymsBtn"
        android:layout_below = "@id/gym_hours"
        android:text="add"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_margin = "20dp"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addgyms_list"
        android:layout_below = "@id/addgymsBtn"
        android:text="view gyms"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_margin = "20dp"

        />


</RelativeLayout>