<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/new_user_menu"
    android:layout_height="match_parent"
    tools:context=".NewUserMenu">

    <LinearLayout
        android:id="@+id/menu3"
        android:layout_width="378dp"
        android:layout_height="90dp"
        android:layout_below="@+id/menu2"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/findFriendButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border"
            android:text="search friend"
            android:layout_weight="1">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/FriendListButtonXML"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border"
            android:text="friend list"
            android:layout_weight="1">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/gymsBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border"
            android:text="Gyms"
            android:layout_weight="1">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/Gold">

        <ImageButton
            android:id="@+id/profileBtn"
            android:layout_width="99dp"
            android:layout_height="99dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="27dp"
            android:adjustViewBounds="true"
            android:background="@drawable/circle"
            android:scaleType="centerCrop"
            android:src="@drawable/dumbbell" />

        <TextView
            android:id="@+id/textUserName"
            android:layout_width="150dp"
            android:layout_height="33dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"

            android:layout_marginTop="32dp"

            android:layout_marginEnd="36dp"
            android:layout_toStartOf="@+id/logOutBtn"
            android:layout_toEndOf="@+id/profileBtn"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.029" />

        <Button
            android:id="@+id/logOutBtn"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="122dp"
            android:text="Log Out"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/locateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp"
            android:text="Locate"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/textUserName"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:layout_toEndOf="@+id/profileBtn"
            android:background="@drawable/circle_shap"
            android:indeterminate="false"
            android:progress="1"
            android:progressDrawable="@drawable/circle_percentage_bar"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/dailyCalTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="34dp"
            android:layout_marginBottom="18dp"
            android:textSize="16dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/dailyCalTxt"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="6dp"
            android:text="Daily calorie goal:" />

        <TextView
            android:id="@+id/TodayPct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textUserName"
            android:layout_marginStart="12dp"
            android:layout_marginTop="33dp"
            android:layout_toEndOf="@+id/progressBar"
            android:text="TextView" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/menu1"
        android:layout_width="378dp"
        android:layout_height="90dp"
        android:layout_below="@+id/userInfo"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        android:weightSum="3">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/recordBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border"
            android:layout_weight="1"
            android:text="Record">
        </androidx.appcompat.widget.AppCompatButton>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/chatBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border"
            android:layout_weight="1"
            android:text="Chat">

        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/milestoneBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border"
            android:text="Milestone"
            android:layout_weight="1">
        </androidx.appcompat.widget.AppCompatButton>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu2"
        android:layout_width="378dp"
        android:layout_height="90dp"
        android:layout_below="@+id/menu1"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/communityBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border"
            android:text="community"
            android:layout_weight="1">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dietBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border"
            android:text="diet"
            android:layout_weight="1">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/leaderboardBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border"
            android:text="Leaderboard"
            android:layout_weight="1">
        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>


</RelativeLayout>